ChangeLog for package rkwarddev

## 0.02-1 (2011-09-28)
  - added functions rk.XML.insert(), rk.XML.include(), rk.XML.embed(), rk.XML.preview(),
    rk.XML.snippet(), and rk.XML.snippets()
  - included formula node into rk.XML.vars() wrapper
  - rk.XML.varslot() now automatically sets "multi=TRUE" if "min", "max" or "any" are set

## 0.02-0 (2011-09-27)
  - redesigned options for rk.XML.plugin() and rk.plugin.skeleton() for more consistency.
    unfortunately, this breaks backwards compatibility!
  - added functions rk.XML.varselector(), rk.XML.copy(), rk.XML.dialog(), rk.XML.page() and
    rk.XML.wizard()
  - added type checks to rk.XML.spinbox()
  - added "id.name" and "label" to various functions
  - updated rk.XML.formula()

## 0.01-5 (2011-09-25)
  - added functions rk.XML.formula(), rk.XML.convert(), rk.XML.connect(), rk.XML.logic(),
    rk.XML.set() and rk.XML.external()
  - added possibility to add custom XML code to the logic section with rk.XML.plugin()
    and rk.plugin.skeleton()
  - fixed id setting in rk.XML.browser()
  - simplified rk.plugin.skeleton() and rk.XML.pluginmap() by making "about" entirely optional

## 0.01-4 (2011-09-22)
  - fixed wrong doc link and one wrong object name in rk.plugin.skeleton()
  - fixed attribute typo in rk.XML.vars()
  - fixed issue with auto-generated IDs (now using "_" instead of ".")
  - added wizard code options to rk.XML.plugin() and rk.plugin.skeleton()
  - added "edit" and "create" options to rk.plugin.skeleton()
  - added function rk.XML.varslot()
  - added possibility to add custom XML nodes to the varslot in rk.XML.vars()
  - added possibility to paste ready-to-use JavaScript code directly to the preprocess(),
    calculate() and printout() functions, respectively

## 0.01-3 (2011-09-16)
  - added rk.XML.spinbox() and missing options to rk.XML.browser() and rk.XML.saveobj()
  - corrected browser default type in rk.XML.browser()
  - added wizard option to rk.plugin.skeleton()

## 0.01-2 (2011-09-15)